--- a/src/components/login/login.html
+++ b/src/components/login/login.html
@@ -3,11 +3,11 @@
 <form method="POST">
     <label>
         Email
-        <input name="email" type="email">
+        <input name="email" type="email" required="">
     </label>
     <label>
         Password
-        <input name="password" type="password">
+        <input name="password" type="password" required="">
     </label>
     <button>Login</button>
 </form>
