--- a/src/components/regiseter/register.html
+++ b/src/components/regiseter/register.html
@@ -3,19 +3,19 @@
 <form method="POST">
     <label>
         Name
-        <input name="name">
+        <input name="name" required="">
     </label>
     <label>
         Email
-        <input name="email" type="email">
+        <input name="email" type="email" required="">
     </label>
     <label>
         Password
-        <input name="password" type="password">
+        <input name="password" type="password" required="">
     </label>
     <label>
         Password Confirm
-        <input name="password_confirmation" type="password">
+        <input name="password_confirmation" type="password" required="">
     </label>
 
     <button>Register</button>
