--- a/src/components/regiseter/register.html
+++ b/src/components/regiseter/register.html
@@ -1,4 +1,3 @@
-<my-router-link href="/login">Login</my-router-link>
 <h2>Register</h2>
 <form method="POST">
     <label>
@@ -19,4 +18,7 @@
     </label>
 
     <button>Register</button>
+    <div class="text-right">
+        <my-router-link href="/login">Login</my-router-link>
+    </div>
 </form>
