--- a/src/components/login/login.html
+++ b/src/components/login/login.html
@@ -1,13 +1,19 @@
-<my-router-link href="/register">Register</my-router-link>
-<h2>Login</h2>
-<form method="POST">
-    <label>
-        Email
-        <input name="email" type="email" required="">
-    </label>
-    <label>
-        Password
-        <input name="password" type="password" required="">
-    </label>
-    <button>Login</button>
-</form>
+<article class="grid">
+    <hgroup>
+        <h2>Login</h2>
+    </hgroup>
+    <form method="POST">
+        <label>
+            Email
+            <input name="email" type="email" required="">
+        </label>
+        <label>
+            Password
+            <input name="password" type="password" required="">
+        </label>
+        <button>Login</button>
+        <div class="text-right">
+            <my-router-link href="/register">Register</my-router-link>
+        </div>
+    </form>
+</article>
