--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,10 +7,20 @@ body {
   font-family: sans-serif;
 }
 
+nav {
+  position: fixed;
+  width: 100%;
+  padding: 0 var(--block-spacing-horizontal);
+}
+
 ul {
   padding-left: 0;
 
   li {
     list-style-type: none;
   }
+}
+
+.text-right {
+  text-align: right;
 }
