--- a/src/components/list-view/list-view.html
+++ b/src/components/list-view/list-view.html
@@ -1,5 +1,5 @@
-<my-router-link href="/lists">Lists</my-router-link>
-<h2>ToDo lists</h2>
+
+<h2><my-router-link href="/lists">ToDo Lists</my-router-link> > <span class="current-list"></span></h2>
 <form method="POST">
     <label>
         Name
