--- a/src/components/nav/nav.html
+++ b/src/components/nav/nav.html
@@ -1,6 +1,6 @@
 <nav class="container">
     <ul>
-        <li><a href="/lists" class="contrast"><strong>Rokupo</strong></a></li>
+        <li><a href="/lists" class="contrast logo"><strong>Rokupo</strong></a></li>
     </ul>
     <ul>
         <li><button id="logout" href="#" class="contrast" data-theme-switcher="auto">Logout</button></li>
