--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,11 @@
 @import '~@picocss/pico/scss/pico.fluid.classless';
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin-bottom: 0;
 }
 
@@ -29,7 +34,8 @@ ul {
   }
 }
 
-my-router-link.list-item > a, label.list-item {
+my-router-link.list-item > a,
+label.list-item {
   border-radius: var(--border-radius);
   background: var(--code-background-color);
   padding: var(--form-element-spacing-vertical) var(--form-element-spacing-horizontal);
