--- a/src/components/list-view/list-view.html
+++ b/src/components/list-view/list-view.html
@@ -3,7 +3,7 @@
 <form method="POST">
     <label>
         Name
-        <input name="name">
+        <input name="name" required>
     </label>
     <button>Create</button>
 </form>
