--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -78,3 +78,11 @@ button:active {
   background-size: 100%;
   transition: background 0s;
 }
+
+a[role="button"].delete-btn {
+  float: right;
+  background-color: #b71c1c;
+  border-color: #b71c1c;
+  padding: 5px 12px;
+  margin-top: -5px;
+}
