--- a/src/components/regiseter/register.html
+++ b/src/components/regiseter/register.html
@@ -1,24 +1,26 @@
-<h2>Register</h2>
-<form method="POST">
-    <label>
-        Name
-        <input name="name" required="">
-    </label>
-    <label>
-        Email
-        <input name="email" type="email" required="">
-    </label>
-    <label>
-        Password
-        <input name="password" type="password" required="">
-    </label>
-    <label>
-        Password Confirm
-        <input name="password_confirmation" type="password" required="">
-    </label>
+<article class="grid">
+    <h2>Register</h2>
+    <form method="POST">
+        <label>
+            Name
+            <input name="name" required="">
+        </label>
+        <label>
+            Email
+            <input name="email" type="email" required="">
+        </label>
+        <label>
+            Password
+            <input name="password" type="password" required="">
+        </label>
+        <label>
+            Password Confirm
+            <input name="password_confirmation" type="password" required="">
+        </label>
 
-    <button>Register</button>
-    <div class="text-right">
-        <my-router-link href="/login">Login</my-router-link>
-    </div>
-</form>
+        <button>Register</button>
+        <div class="text-right">
+            <my-router-link href="/login">Login</my-router-link>
+        </div>
+    </form>
+</article>
