--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -48,7 +48,7 @@ label.list-item {
 }
 
 .hidden {
-  display: none;
+  display: none !important;
 }
 
 body > .container {
@@ -59,9 +59,22 @@ body > .container {
   animation: fadein 0.3s;
 }
 
+.list-item input:not([type="checkbox"]):not([type="radio"]) {
+  width: calc(100% - 200px);
+  display: inline-block;
+  margin: 0;
+  padding: 5px;
+  height: 17px;
+}
+
 @keyframes fadein {
-  from { opacity: 0; }
-  to { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
 }
 
 button {
@@ -79,12 +92,23 @@ button:active {
   transition: background 0s;
 }
 
-a[role="button"].delete-btn {
+a[role="button"].delete-btn,
+a[role="button"].cancel-btn {
   float: right;
   background-color: #b71c1c;
   border-color: #b71c1c;
   padding: 5px 12px;
   margin-top: -5px;
+}
+
+a[role="button"].edit-btn,
+a[role="button"].apply-btn {
+  float: right;
+  background-color: #47a7f5;
+  border-color: #47a7f5;
+  padding: 5px 12px;
+  margin-top: -5px;
+  margin-right: 10px;
 }
 
 ul.errors-list {
